<resources>
    <string name="shopelia_default_app_name">l\'application</string>
    <string name="shopelia_account_name">Shopelia</string>
    <string name="shopelia_account_only_one">Vous ne pouvez pas vous connecter avec plusieurs compte à la fois. Veuillez supprimer le compte existant pour en ajouter un autre.</string>
    <string name="shopelia_dialog_title">Shopelia</string>
    <string name="shopelia_action_bar_sign_in">Déjà inscrit ?</string>
    <string name="shopelia_action_bar_sign_up">Première commande ?</string>
    <string name="shopelia_action_bar_sign_out">Se déconnecter</string>
    <string name="shopelia_action_bar_add">Ajouter</string>
    <string name="shopelia_action_bar_switch_account">Changer de compte</string>
    <string name="shopelia_action_bar_add_address">Ajouter une adresse</string>
    <string name="shopelia_action_bar_add_payment_card">Ajouter une carte de paiement</string>
    <string name="shopelia_welcome_introduction">Découvrez Shopelia, le nouveau service pour commander facilement en ligne !</string>
    <string-array name="shopelia_welcome_list">
        <item>
<![CDATA[
	        <b>Interface optimisée</b> pour votre smartphone
	        ]]>
        </item>
        <item>
<![CDATA[
            Service <b>rapide et gratuit</b>
        	]]>
        </item>
        <item>
<![CDATA[
	        Transaction <b>100% sécurisée</b> par un organisme agrée auprès de la Banque de France
	    ]]>
        </item>
    </string-array>
    <string name="shopelia_welcome_or">ou </string>
    <string name="shopelia_welcome_continue_on"><u>continuer sur le site du marchand</u></string>
    <string name="shopelia_product_more_information"><a>Description du produit</a></string>
    <string name="shopelia_product_sold_and_delivered_by_merchant">Vendu et expédié par</string>
    <string name="shopelia_product_purchase_this">Acheter</string>
    <string name="shopelia_product_price_total">Total</string>
    <string name="shopelia_product_price_product">Prix du produit</string>
    <string name="shopelia_product_price_strikeout">Ancien prix</string>
    <string name="shopelia_product_price_delivery">Livraison</string>
    <string name="shopelia_product_price_delivery_free">gratuite</string>
    <string name="shopelia_product_price_shopelia">Réduction Shopelia</string>
    <string name="shopelia_product_options_choose">Veuillez choisir</string>
    <string name="shopelia_product_options_option_pattern">Option %d</string>
    <string name="shopelia_product_description_go_merchant_title">Aller chez le marchand</string>
    <string name="shopelia_product_description_go_merchant_content">Voulez-vous aller sur la fiche du marchand ?</string>
    <string name="shopelia_product_quantity">Quantité</string>
	<string name="shopelia_product_informations_hint">Précisez si nécessaire les options souhaitées (taille, couleur, ...)</string>
    <string name="shopelia_authenticate_remove_check">Tous les achats sont à votre charge. Vous pouvez à tout moment désactiver cette option en vous déconnectant de votre compte Shopelia.</string>
    <string name="shopelia_authenticate_title">Authentification</string>
    <string name="shopelia_authenticate_remember_me">Ne plus me le demander</string>
    <string name="shopelia_authenticate_validate">Confirmer</string>
    <string name="shopelia_authenticate_your_password">Votre mot de passe Shopelia</string>
    <string name="shopelia_authenticate_wrong_password">Mot de passe incorrect</string>
    <string name="shopelia_authenticate_waiting_message">Authentification...</string>
    <string name="shopelia_authenticate_auto_sign_in_message">Connexion en cours...</string>
    <string name="shopelia_form_main_waiting">Sauvegarde de vos informations</string>
    <string name="shopelia_form_main_phone">Numéro de téléphone</string>
    <string name="shopelia_form_main_email">Email</string>
    <string name="shopelia_form_main_password">Mot de passe</string>
    <string name="shopelia_form_main_validate">Poursuivre ma commande</string>
    <string name="shopelia_form_main_sign_in">Connexion</string>
    <string name="shopelia_form_main_personal_info">Informations personnelles</string>
    <string name="shopelia_form_main_shipping_address">Adresse de livraison</string>
    <string name="shopelia_form_main_payment_method">Moyen de paiement</string>
    <string name="shopelia_form_main_card_number">Numéro de la carte</string>
    <string name="shopelia_form_main_address">Adresse</string>
    <string name="shopelia_form_main_header_text" formatted="false">
<![CDATA[
	    Votre commande va être passée automatiquement\n avec <b>Shopelia</b> sur le site <b>%s</b>.
	    ]]>
    </string>
    <string name="shopelia_form_main_cgu">	   J\'accepte les <a href="shopelia.com/cgu">Conditions Générales d\'Utilisation</a> de Shopelia</string>
    <string name="shopelia_form_address_display_format" formatted="false">%s, %s, %s</string>
    <string name="shopelia_form_main_use_secured_server">Continuer sur serveur sécurisé</string>
    <string name="shopelia_form_main_create_account">Créer un compte</string>
    <string name="shopelia_form_main_sign_in_account">Se connecter</string>
    <string name="shopelia_form_account_name">Nom</string>
    <string name="shopelia_form_account_first_name">Prénom</string>
    <string name="shopelia_form_account_card_number">Numéro de la carte</string>
    <string name="shopelia_form_account_validate">Continuer la commande</string>
    <string name="shopelia_sign_in_forgot_password"><![CDATA[<u>Mot de passe oublié ?</u>]]></string>
    <string name="shopelia_sign_in_waiting">Connexion en cours</string>
    <string name="shopelia_form_address_first_name_and_last_name">Prénom Nom</string>
    <string name="shopelia_form_address_first_name">Prénom</string>
    <string name="shopelia_form_address_last_name">Nom</string>
    <string name="shopelia_form_address_address">Adresse</string>
    <string name="shopelia_form_address_extra_informations">Complément d\'informations</string>
    <string name="shopelia_form_address_city">Ville</string>
    <string name="shopelia_form_address_zipcode">Code postal</string>
    <string name="shopelia_form_address_country">Pays</string>
    <string name="shopelia_form_address_validate">Enregistrer mon adresse</string>
    <string name="shopelia_form_address_validate_add">Ajouter mon adresse</string>
    <string name="shopelia_form_address_validate_edit">Modifier mon adresse</string>
    <string name="shopelia_form_address_wait_for_adding">Création de votre nouvelle adresse</string>
    <string name="shopelia_form_address_wait_for_editting">Modification de votre adresse en cours</string>
    <string name="shopelia_form_address_error_name">Veuillez entrer votre prénom suivi de votre nom</string>
    <string name="shopelia_form_address_loading_autocomplete">Veuillez patienter</string>
    <string name="shopelia_form_address_loading_editing">Modification de votre adresse</string>
    <string name="shopelia_form_address_loading_adding">Ajout de votre nouvelle adresse</string>
    <string name="shopelia_form_address_edit">Editer</string>
    <string name="shopelia_form_address_delete">Supprimer</string>
    <string name="shopelia_form_address_country_not_found">Ce pays est indisponnible</string>
    <string name="shopelia_form_address_country_not_available">Shopelia n\'est pas encore disponible dans votre pays. Pour le moment seul la France, la Belgique et le Luxembourg peuvent utiliser le service.</string>
    <string-array name="shopelia_form_address_item_actions">
        <item>@string/shopelia_form_address_edit</item>
        <item>@string/shopelia_form_address_delete</item>
    </string-array>
    <string-array name="shopelia_form_payment_item_actions">
        <item>@string/shopelia_form_address_delete</item>
    </string-array>
    <string name="shopelia_form_payment_card_number">Numéro de la carte</string>
    <string name="shopelia_form_payment_card_expiry_date">MM/AA</string>
    <string name="shopelia_form_payment_card_cvv">CVV</string>
    <string name="shopelia_form_payment_card_validate">Enregistrer ma carte</string>
    <string name="shopelia_form_payment_card_not_compatible">Shopelia n\'est disponible que pour les cartes Visa et American Express.</string>
    <string name="shopelia_form_payment_card_secured_server">Serveur sécurisé</string>
    <string name="shopelia_form_payment_disclaimer">Le stockage de vos informations de carte bancaire est assuré par <b>Payline</b>, organisme agréé PCI DSS auprès de la banque de France.</string>
    <string name="shopelia_footer">Paiement sécurisé par</string>
    <string name="shopelia_tax_et">HT</string>
    <string name="shopelia_tax_ati">TTC</string>
    <string name="shopelia_product_shipping_fees" formatted="false">+ %s de frais de livraison</string>
    <string name="shopelia_product_free_shipping">Livraison gratuite</string>
    <string name="shopelia_product_shipping_is_included">Livraison <font fgcolor="#2b9b82" color="#2b9b82">incluse</font></string>
    <string name="shopelia_product_loading">Chargement du produit...</string>
	<string name="shopelia_product_informations_label">Informations</string>
    <string name="shopelia_waiting_shopelia_is_preparing_your_order" formatted="false">Shopelia prépare votre commande sur %s</string>
    <string name="shopelia_waiting_with_shopelia_order_with_1_click">Avec Shopelia, commandez facilement en 1-clic avec votre mobile sur n\'importe quel site e-commerce !</string>
    <string name="shopelia_confirmation_waiting" formatted="false">Shopelia prépare votre commande sur %s</string>
    <string name="shopelia_confirmation_confirm">Valider ma commande</string>
    <string name="shopelia_confirmation_title">Vérification et validation de votre commande</string>
    <string name="shopelia_confirmation_shipping_fees">Frais de livraison</string>
    <string name="shopelia_confirmation_cashfront">Réduction Shopelia</string>
    <string name="shopelia_confirmation_total_price">TOTAL</string>
    <string name="shopelia_confirmation_error">Une erreur est survenue. Impossible de valider votre commande.</string>
    <string name="shopelia_confirmation_free"><font fgcolor="#2b9b82" color="#2b9b82">Gratuit</font></string>
    <string name="shopelia_confirmation_update_user">Mise à jour...</string>
    <string name="shopelia_confirmation_you_have_no_card">Vous n\'avez renseigné aucune carte de paiement. Vous devez enregistrer au moins une carte de paiement pour commander.</string>
    <string name="shopelia_confirmation_card_expired">Votre carte de paiement est arrivé à expiration. Enregistrez une nouvelle carte pour commander.</string>
    <string name="shopelia_confirmation_add_a_card">Cliquez ici pour ajouter une carte de paiement</string>
    <string name="shopelia_confirmation_you_have_no_address">Vous n\'avez renseigné aucune adresse. Vous devez enregistrer au moins une adresse pour commander.</string>
    <string name="shopelia_recover_pin_title">Code d\'accès oublié ?</string>
    <string name="shopelia_recover_pin_description">Saisissez les informations suivantes afin de réinitialiser votre code d\'accès</string>
    <string name="shopelia_recover_pin_type_last_numbers">4 derniers chiffres de votre carte de paiement</string>
    <string name="shopelia_recover_pin_last_numbers">XXXX</string>
    <string name="shopelia_recover_pin_type_expiry_date">Date d’expiration de votre carte de paiement</string>
    <string name="shopelia_recover_pin_expiry_date">MM/AA</string>
    <string name="shopelia_recover_pin_send">CRÉER NOUVEAU CODE D\'ACCÈS</string>
    <string name="shopelia_form_password_header">Créer votre mot de passe</string>
    <string name="shopelia_form_password_validate">Créer le mot de passe</string>
    <string name="shopelia_form_password_password">Nouveau mot de passe</string>
    <string name="shopelia_form_password_confirm">Confirmer le mot de passe</string>
</resources>