<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.shopelia.android.widget.form.FormLinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/shopelia_margin_normal"
        android:paddingLeft="@dimen/shopelia_margin_large"
        android:paddingRight="@dimen/shopelia_margin_large"
        android:paddingTop="@dimen/shopelia_margin_normal" >

        <com.shopelia.android.widget.form.HeaderField
            android:id="@+id/header_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shopelia_icon="@drawable/shopelia_pin"
            app:shopelia_text="@string/shopelia_form_main_shipping_address" />

        <com.shopelia.android.widget.form.PhoneField
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shopelia_hint="@string/shopelia_form_main_phone" />

        <com.shopelia.android.widget.form.NameField
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/shopelia_margin_small"
            android:ems="10"
            android:inputType="textCapSentences|textNoSuggestions|textPersonName"
            android:nextFocusDown="@+id/name"
            app:shopelia_hint="@string/shopelia_form_address_first_name_and_last_name" />

        <com.shopelia.android.widget.form.EditTextField
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"
            android:inputType="textPostalAddress"
            android:nextFocusDown="@+id/extras"
            android:singleLine="true"
            app:shopelia_hint="@string/shopelia_form_address_address" />

        <com.shopelia.android.widget.form.EditTextField
            android:id="@+id/extras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:nextFocusDown="@+id/zipcode"
            android:singleLine="true"
            app:shopelia_hint="@string/shopelia_form_address_extra_informations" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100" >

            <com.shopelia.android.widget.form.NumberField
                android:id="@+id/zipcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/shopelia_margin_small"
                android:layout_weight="50"
                android:ems="10"
                android:inputType="number"
                android:nextFocusDown="@+id/city"
                app:shopelia_hint="@string/shopelia_form_address_zipcode" />

            <com.shopelia.android.widget.form.NameField
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/shopelia_margin_small"
                android:layout_weight="50"
                android:ems="10"
                android:inputType="textPersonName|textCapSentences"
                app:shopelia_hint="@string/shopelia_form_address_city" />
        </LinearLayout>

        <com.shopelia.android.widget.form.NameField
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName|textCapSentences"
            app:shopelia_hint="@string/shopelia_form_address_country" />

        <com.shopelia.android.widget.ValidationButton
            android:id="@+id/validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/shopelia_margin_extra_large"
            app:shopelia_icon="@drawable/shopelia_pin_white"
            app:shopelia_text="@string/shopelia_form_address_validate" />

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            layout="@layout/shopelia_include_footer" />
    </com.shopelia.android.widget.form.FormLinearLayout>

</ScrollView>