<?xml version="1.0" encoding="utf-8"?>
<com.shopelia.android.widget.form.FormLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:cacheColorHint="@android:color/transparent"
    android:divider="@null"
    android:listSelector="@android:color/transparent"
    android:orientation="vertical"
    android:scrollbarStyle="outsideOverlay" >

    <com.shopelia.android.widget.form.HeaderField
        android:id="@+id/header_personal_informations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shopelia_icon="@drawable/shopelia_user"
        app:shopelia_text="@string/shopelia_form_main_personal_info" />

    <com.shopelia.android.widget.form.EmailField
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shopelia_hint="@string/shopelia_form_main_email" >
    </com.shopelia.android.widget.form.EmailField>

    <com.shopelia.android.widget.form.PasswordField
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shopelia_hint="@string/shopelia_form_main_password" >
    </com.shopelia.android.widget.form.PasswordField>

    <com.shopelia.android.widget.form.PhoneField
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shopelia_hint="@string/shopelia_form_main_phone" />

    <com.shopelia.android.widget.form.HeaderField
        android:id="@+id/header_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shopelia_icon="@drawable/shopelia_pin"
        app:shopelia_text="@string/shopelia_form_main_shipping_address" />

    <com.shopelia.android.widget.form.AddressField
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shopelia_hint="@string/shopelia_form_main_address" />

    <com.shopelia.android.widget.form.HeaderField
        android:id="@+id/header_payment_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:visibility="gone"
        app:shopelia_icon="@drawable/shopelia_card"
        app:shopelia_text="@string/shopelia_form_main_payment_method" />

    <com.shopelia.android.widget.form.SingleLinePaymentCardField
        android:id="@+id/payment_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/shopelia_margin_normal"
        android:enabled="false"
        android:visibility="gone" >
    </com.shopelia.android.widget.form.SingleLinePaymentCardField>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/shopelia_margin_normal"
        android:layout_marginTop="@dimen/shopelia_margin_small"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/shopelia_margin_normal" >

        <CheckBox
            android:id="@+id/cgu_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/shopelia_margin_normal"
            android:button="@drawable/shopelia_btn_check_holo_light" />

        <com.shopelia.android.widget.FontableTextView
            android:id="@+id/cgu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:button="@drawable/shopelia_btn_check_holo_light"
            android:checked="false"
            android:clickable="true"
            android:linksClickable="true"
            android:text="@string/shopelia_form_main_cgu"
            android:textColorLink="@color/shopelia_link_text_color" />

    </LinearLayout>

</com.shopelia.android.widget.form.FormLinearLayout>