<?xml version="1.0" encoding="utf-8"?>
<com.shopelia.android.widget.form.FormLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/shopelia_activity_vertical_margin"
    android:paddingLeft="@dimen/shopelia_activity_horizontal_margin"
    android:paddingRight="@dimen/shopelia_activity_horizontal_margin"
    android:paddingTop="@dimen/shopelia_activity_vertical_margin" >

    <com.shopelia.android.widget.form.HeaderField
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shopelia_icon="@drawable/shopelia_user"
        app:shopelia_text="@string/shopelia_form_password_header" >
    </com.shopelia.android.widget.form.HeaderField>

    <com.shopelia.android.widget.form.PasswordField
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shopelia_hint="@string/shopelia_form_password_password" >
    </com.shopelia.android.widget.form.PasswordField>

    <com.shopelia.android.widget.form.PasswordField
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shopelia_hint="@string/shopelia_form_password_confirm" >
    </com.shopelia.android.widget.form.PasswordField>

    <com.shopelia.android.widget.ValidationButton
        android:id="@+id/validate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/shopelia_margin_large"
        app:shopelia_icon="@drawable/shopelia_check_white"
        app:shopelia_text="@string/shopelia_form_password_validate" >
    </com.shopelia.android.widget.ValidationButton>

    <com.shopelia.android.widget.ShopeliaSupportInclude
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/shopelia_margin_large" >
    </com.shopelia.android.widget.ShopeliaSupportInclude>

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/shopelia_include_footer" />

</com.shopelia.android.widget.form.FormLinearLayout>