<?xml version="1.0" encoding="utf-8"?>
<com.shopelia.android.widget.form.FormLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/shopelia_margin_large"
    android:paddingRight="@dimen/shopelia_margin_large" >

    <com.shopelia.android.widget.form.HeaderField
        android:id="@+id/headerField1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/shopelia_margin_normal"
        app:shopelia_icon="@drawable/shopelia_lock"
        app:shopelia_text="@string/shopelia_recover_pin_title" >
    </com.shopelia.android.widget.form.HeaderField>

    <com.shopelia.android.widget.FontableTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/shopelia_margin_large"
        android:layout_marginLeft="@dimen/shopelia_margin_normal"
        android:layout_marginRight="@dimen/shopelia_margin_normal"
        android:layout_marginTop="@dimen/shopelia_margin_normal"
        android:gravity="center"
        android:text="@string/shopelia_recover_pin_description"
        android:textSize="@dimen/shopelia_font_size_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/shopelia_margin_normal"
        android:orientation="horizontal" >

        <com.shopelia.android.widget.FontableTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/shopelia_margin_normal"
            android:layout_weight="50"
            android:text="@string/shopelia_recover_pin_type_last_numbers"
            android:textSize="@dimen/shopelia_font_size_small" />

        <com.shopelia.android.widget.FontableTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/shopelia_margin_normal"
            android:layout_weight="50"
            android:text="@string/shopelia_recover_pin_type_expiry_date"
            android:textSize="@dimen/shopelia_font_size_small" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <com.shopelia.android.widget.form.NumberField
            android:id="@+id/lastNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/shopelia_margin_normal"
            android:layout_weight="50"
            app:shopelia_hint="@string/shopelia_recover_pin_last_numbers"
            app:shopelia_max_length="4" >
        </com.shopelia.android.widget.form.NumberField>

        <com.shopelia.android.widget.form.SimpleDateField
            android:id="@+id/expiryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/shopelia_margin_normal"
            android:layout_weight="50"
            app:shopelia_hint="@string/shopelia_recover_pin_expiry_date"
            app:shopelia_max_length="5" >
        </com.shopelia.android.widget.form.SimpleDateField>
    </LinearLayout>

    <com.shopelia.android.widget.FontableTextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/shopelia_margin_none"
        android:layout_marginLeft="@dimen/shopelia_margin_extra_small"
        android:layout_marginRight="@dimen/shopelia_margin_extra_small"
        android:layout_marginTop="@dimen/shopelia_margin_large"
        android:gravity="center"
        android:textColor="@color/shopelia_red"
        android:textSize="@dimen/shopelia_font_size_small"
        android:visibility="gone" />

    <com.shopelia.android.widget.FontableTextView
        android:id="@+id/validate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/shopelia_margin_extra_large"
        android:layout_marginTop="@dimen/shopelia_margin_extra_large"
        android:background="@drawable/shopelia_validation_button_background"
        android:gravity="center"
        android:text="@string/shopelia_recover_pin_send"
        android:textColor="@color/shopelia_validation_button_text_color"
        android:textSize="@dimen/shopelia_font_size_normal"
        android:textStyle="bold"
        app:shopelia_fontStyle="bold" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/shopelia_include_footer" />

</com.shopelia.android.widget.form.FormLinearLayout>